fix contact form label font size on mobile, closes #36 custom page text fixes

--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -25,6 +25,9 @@
     font-size: 18px
     margin-bottom: 20px
     
+    @media screen and (max-width: $break-small)
+      font-size: 14px
+    
   .contact-name, .contact-spam, .contact-send, .contact-email 
     display: block
     position: relative
